--- a/calendarios.qmd
+++ b/calendarios.qmd
@@ -1,29 +1,39 @@
 ---
-title: ""
-page-layout: full          # ocupa toda a largura do corpo
+page-layout: full          # ocupa toda a largura
 format:
   html:
-    default: true
-    search: false          # desliga a barra/flutuante de busca
+    default: true          # usa o tema padrão do site
+    search: false          # remove a barra/flutuante de busca
 ---
 
 ```{=html}
 <style>
-/* zera margens laterais do artigo */
+/* tira limite de largura que o tema impõe ao artigo */
+.quarto-article,
 main.content, section.content {
-  margin: 0;
-  padding: 0;
+  max-width: none;
+  padding-left: 0;
+  padding-right: 0;
 }
 
-/* iframe ocupa toda a largura e evita scroll horizontal */
+/* cor de fundo igual à do calendário */
+body {
+  background-color: #f8f9fc;
+}
+
+/* iframe ocupa toda a viewport e não cria rolagem interna */
 iframe.calendarios {
-  width: 100%;
-  height: 1200px;          /* ajuste conforme necessidade */
+  display: block;
+  width: 100vw;      /* 100 % da largura da janela */
+  max-width: 100%;
+  height: 92vh;      /* ajuste se quiser mais/menos altura */
   border: none;
+  margin: 0;
+  padding: 0;
 }
 </style>
 ```
 
-<iframe class="calendarios" src="/resources/calendarios_EP_TODAS_2P_2025_single.html" title="Calendário FEPESCA – 2P/2025">
+<iframe class="calendarios" src="resources/calendarios_EP_TODAS_2P_2025_single.html" title="Calendários FEPESCA – 2P 2025">
 
 </iframe>
